tests/compile_errors/json/006_unknown_field_access.xr
// 006_unknown_field_access.xr
// 错误测试：访问严格类型中不存在的字段
// 期望错误：类型 '...' 没有字段 'z'
let p: {x,y} = { "x": 1, "y": 2 }
print(p.z)
